--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "mongodb": "^3.5.9",
     "mongoose": "^5.9.23",
     "validator": "^13.1.1"
+  },
+  "devDependencies": {
+    "nodemon": "^2.0.4"
   }
 }
